--- a/glade/window_main.glade
+++ b/glade/window_main.glade
@@ -101,7 +101,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="curent">
+                      <object class="GtkLabel" id="Curent">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="label" translatable="yes">Current player:</property>
